versioned_docs/version-1.4/cloud/namespaces.mdx
---
title: Secure and isolated namespaces
description: Create and manage secure and isolated Kubernetes namespaces for you and your team
sidebar_label: Namespaces
id: namespaces
---

import Image from "@theme/Image";

With Okteto Cloud you can create and manage secure and isolated Kubernetes namespaces for you and your team.

Okteto Cloud will take care of all the required RBAC roles and bindings, resources quotas and limits, pod security policies, and network policies so everyone in your team can safely deploy and develop applications in Kubernetes.

## Manage your namespaces

You can create up to five namespaces per account. Go to the [Okteto Cloud UI](https://cloud.okteto.com/#/?origin=docs) and click on the (+) symbol on the left.

<p align="center">
  <Image
    src={require("@site/static/img/new-dialog.png").default}
    alt="new namespace dialog"
    width="650"
  />
</p>

You can also create a namespace directly from the command line with the `okteto namespace create` command.

Switch your kubectl configuration to point to your namespaces with the `okteto kubeconfig` command.

Once you're done, you can also delete your namespace via the UI, or with the `okteto namespace delete` command.

## Share your namespace

By default, you'll be the only person with access to your namespaces. Invite your teammates to enable true real-time collaboration.

To share a namespace go to the [Okteto Cloud UI](https://cloud.okteto.com/#/?origin=docs), select the namespace you want to share and press the `Share` button in the namespace menu (you'll find it in the main bar at the top).

<p align="center">
  <Image
    src={require("@site/static/img/share.png").default}
    alt="share a namespace"
    width="850"
  />
</p>

In the `Share` dialog, type the email address of the team members you want to share this namespace with. Once you press save, Okteto Cloud will update the necessary permissions and notify your teammates via email.
